# systems-programming-design-patterns

./: .gitignore  README.md  go.mod  go.sum  main.go
advanced_concurrency/: lockfree_config.go
classic-ping-pong/: main.go
computer-networks/: networking-basics  networking-basics.go
concurrency_core/: channels.go  errgroup_example.go
concurrent-lru-cache/: concurrent-lru-cache.go
context_propagation/: deadline.go
data_structures/: timing_wheel.go
graceful/: shutdown.go
loadbalancer/: consistent_hash.go  round_robin.go
os_io/: durability_fsync.go  file_main.go  file_operations.go
proxy/: reverse_proxy.go
proxy/connection_pool/: pool.go
proxy/tls_sni/: sni_inspector.go
rate-limiter/: sliding_window.go  token-bucket.go
resilience/: circuit_breaker.go
resiliency/: bulkhead_isolation.go  jitter_backoff.go
systems/: unix_kqueue_darwin.go  unix_mmap.go  unix_sockets_darwin.go
tcp/: server.go
thread-safe-queue/: blocking-queue.go  ring_buffer.go
traffic_engineering/: passive_outlier.go
traffic_engineering/cpp-cool-handson/: CMakeLists.txt  README.md
traffic_engineering/cpp-cool-handson/concurrency/: ProducerConsumer.cpp
traffic_engineering/cpp-cool-handson/io/: AsyncFileIO.cpp
traffic_engineering/cpp-cool-handson/ipc/: SharedMemoryDemo.cpp
traffic_engineering/cpp-cool-handson/memory/: MemoryPool.cpp  SmartPointers.cpp
traffic_engineering/cpp-cool-handson/multithreading/: MutexBasics.cpp  ThreadPool.cpp
traffic_engineering/cpp-cool-handson/networking/: TcpEchoClient.cpp  TcpEchoServer.cpp
traffic_engineering/cpp-cool-handson/systems/: FileWatcher.cpp  SignalHandling.cpp
traffic_engineering/go-network-systems/: README.md  go.mod
traffic_engineering/go-network-systems/concurrency/atomic_ops/: main.go
traffic_engineering/go-network-systems/concurrency/channels/: main.go
traffic_engineering/go-network-systems/concurrency/circuit_breaker/: main.go
traffic_engineering/go-network-systems/concurrency/mutex/: main.go
udp/: server.go
waitgroup/: concurrency  waitgroup_example.go
workerpool/: pool.go
(+48 files in other folders)
